# headunit-desktop

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CNAME  Doxyfile  MainForm.ui.qml  README.md  RPI-INSTRUCTIONS.md  SCREENSHOTS.md  aaVideo.qml  aa_settings.ini  addressbook.cpp  addressbook.h  app-with-welleio.pro  app.pro  bintray-deploy.json  config.pri  headunit-desktop.desktop  headunit-desktop.pro  headunit-desktop.pro.qtds  headunit-desktop.qmlproject  headunit-desktop.qmlproject.qtds  headunit.cpp  headunit.desktop  headunit.h  main.cpp  main.qml  main.qrc  mediadb.cpp  mediadb.h  medialibrary.cpp  medialibrary.h  mediascanner.cpp  mediascanner.h  pluginmanager.cpp  pluginmanager.h  rpi-instructions.md  telephonymanager.cpp  telephonymanager.h  (+4 more)
.devcontainer/: Dockerfile  devcontainer.json
HUDTheme/: AlphabetScrollBar.qml  Arrow.qml  HUDTheme.pro  ImageButton.qml  ModeSwitch.qml  ThemeText.qml  TopMenu.qml  plugin.cpp  plugin.h  qml.qrc  qmldir
app/: app.pro  hudloader.cpp  hudloader.h  loader.qml  main.cpp  main.qrc  mediamanager.cpp  mediamanager.h  panelitemsmodel.cpp  panelitemsmodel.h  pluginlist.cpp  pluginlist.h  pluginlistmodel.cpp  pluginlistmodel.h  pluginmanager.cpp  pluginmanager.h  pluginobject.cpp  pluginobject.h  settingsloader.cpp  settingsloader.h  theme.json  thememanager.cpp  thememanager.h
dab-gui/: DABLayout.qml  dab-gui.pro  dabHelper.cpp  dab_gui.qml  dab_gui.qrc  main.cpp  main.qml  qtquickcontrols2.conf  welleIO.qml
debian/: changelog  control  copyright  headunit-desktop-plugin-androidauto.install  headunit-desktop-plugin-hvac.install  headunit-desktop-plugin-media-player.install  headunit-desktop-plugin-navit.install  headunit-desktop-plugin-odb-car.install  headunit-desktop-plugin-phone-bluetooth.install  headunit-desktop-plugin-rpi.install  headunit-desktop-plugin-sample.install  headunit-desktop-plugin-volume.install  headunit-desktop-plugin-welleio.install  headunit-desktop.install  rules
etc/: aptftp.conf  hud_key.gpg.enc
html/: annotated.html  classDesktopEventCallbacks-members.html  classDesktopEventCallbacks.html  classDesktopEventCallbacks__coll__graph.map  classDesktopEventCallbacks__coll__graph.md5  classDesktopEventCallbacks__inherit__graph.md5  classHeadunit-members.html  classHeadunit.html  classHeadunit__coll__graph.map  classHeadunit__inherit__graph.md5  classMediaDB-members.html  classMediaDB.html  classMediaDB__coll__graph.map  classMediaDB__inherit__graph.map  classMediaDB__inherit__graph.md5  classMediaLibrary-members.html  classMediaLibrary.html  classMediaLibrary__coll__graph.map  classMediaLibrary__inherit__graph.md5  classMediaScanner-members.html  classMediaScanner.html  classMediaScanner__coll__graph.map  classMediaScanner__coll__graph.md5  classMediaScanner__inherit__graph.map  classMediaScanner__inherit__graph.md5  classUsbConnectionListener-members.html  classUsbConnectionListener.html  classUsbConnectionListener__coll__graph.map  classUsbConnectionListener__inherit__graph.map  classUsbConnectionListener__inherit__graph.md5  classes.html  files.html  functions.html  (+18 more)
modules/android-auto/QtGstreamer/: CMakeLists.txt  main.dox
modules/android-auto/QtGstreamer/QGlib/: CMakeLists.txt  Connect  ParamSpec  QtGLib-2.0.pc.in  RefPointer  Signal  Value  connect.cpp  connect.h  connectimpl.h  emitimpl.h  error.cpp  error.h  gen.cpp  global.h  init.cpp  init.h  object.cpp  object.h  paramspec.cpp  paramspec.h  qglib_signal.h  quark.cpp  quark.h  refpointer.h  signal.cpp  string_p.h  type.cpp  type.h  value.cpp  value.h  wrap.cpp  wrap.h
modules/android-auto/QtGstreamer/QGst/: Bin  BufferList  Bus  CMakeLists.txt  Caps  ChildProxy  ClockTime  ColorBalance  Device  DeviceMonitor  Discoverer  Element  ElementFactory  GhostPad  Init  Int64Range  MiniObject  Pad  Pipeline  PluginFeature  QtGStreamer-1.0.pc.in  QtGStreamerQuick-1.0.pc.in  QtGStreamerUi-1.0.pc.in  QtGStreamerUtils-1.0.pc.in  Segment  StreamVolume  Structure  TagList  UriHandler  VideoOrientation  VideoOverlay  allocator.cpp  allocator.h  bin.cpp  bin.h  buffer.cpp  buffer.h  bufferlist.cpp  bufferlist.h  bus.cpp  (+68 more)
modules/android-auto/QtGstreamer/QGst/Quick/: VideoItem  VideoSurface  videoitem.cpp  videoitem.h  videosurface.cpp  videosurface.h  videosurface_p.h
modules/android-auto/QtGstreamer/QGst/Ui/: GraphicsVideoSurface  GraphicsVideoWidget  global.h  graphicsvideosurface.cpp  graphicsvideosurface.h  graphicsvideosurface_p.h  graphicsvideowidget.cpp  graphicsvideowidget.h  videowidget.cpp  videowidget.h
modules/android-auto/QtGstreamer/QGst/Utils/: ApplicationSink  ApplicationSource  applicationsink.cpp  applicationsink.h  applicationsource.cpp  applicationsource.h  global.h
modules/android-auto/QtGstreamer/elements/: CMakeLists.txt
modules/android-auto/QtGstreamer/elements/gstqtvideosink/: CMakeLists.txt  autotest.cpp  gstqtglvideosink.cpp  gstqtglvideosink.h  gstqtglvideosinkbase.cpp  gstqtglvideosinkbase.h  gstqtquick2videosink.cpp  gstqtquick2videosink.h  gstqtvideosink.cpp  gstqtvideosink.h  gstqtvideosinkbase.cpp  gstqtvideosinkbase.h  gstqtvideosinkmarshal.c  gstqtvideosinkmarshal.h  gstqtvideosinkplugin.cpp  gstqtvideosinkplugin.h  gstqwidgetvideosink.cpp  gstqwidgetvideosink.h
modules/android-auto/QtGstreamer/elements/gstqtvideosink/delegates/: basedelegate.cpp  basedelegate.h  qtquick2videosinkdelegate.cpp  qtquick2videosinkdelegate.h  qtvideosinkdelegate.cpp  qtvideosinkdelegate.h  qwidgetvideosinkdelegate.cpp  qwidgetvideosinkdelegate.h
modules/android-auto/QtGstreamer/elements/gstqtvideosink/painters/: abstractsurfacepainter.h  genericsurfacepainter.cpp  genericsurfacepainter.h  openglsurfacepainter.cpp  openglsurfacepainter.h  videomaterial.cpp  videomaterial.h  videonode.cpp  videonode.h
modules/android-auto/QtGstreamer/elements/gstqtvideosink/utils/: bufferformat.cpp  utils.cpp
modules/android-auto/QtGstreamer/qml/: CMakeLists.txt
modules/android-auto/QtGstreamer/qml/quick1/: CMakeLists.txt  plugin.cpp  videoitem.cpp  videoitem.h
modules/android-auto/QtGstreamer/qml/quick2/: CMakeLists.txt  plugin.cpp
(+382 files in other folders)
